--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <header>
     <h1>DoItWithIT</h1>
-    <p>Realne wsparcie IT dla domu i firm</p>
+    <p>Realne wsparcie IT dla domu i małych firm</p>
   </header>
 
   <div class="network">
@@ -108,7 +108,7 @@
   </div>
 
   <footer>
-    <p>Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> | Tel: <a href="tel:+48123456789">+48 123 456 789</a></p>
+    <p>Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> | Tel: <a href="tel:+48123">+48 123</a></p>
     <p>&copy; 2025 DoItWithIT</p>
   </footer>
 
