--- a/index.html
+++ b/index.html
@@ -15,107 +15,82 @@
 
     header {
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 2rem 1rem 1rem 1rem;
     }
 
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
+      font-size: 3rem;
       color: #00bfff;
+      margin-bottom: 0.3rem;
     }
 
-    p {
-      color: #ccc;
+    p.subtitle {
       font-size: 1.2rem;
+      color: #ccc;
+      margin: 0;
     }
 
-    .language-toggle {
+    .lang-switcher {
       position: absolute;
       top: 1rem;
       right: 1rem;
     }
 
-    .language-toggle button {
+    .lang-switcher button {
+      background: none;
+      border: 1px solid #00bfff;
+      color: #00bfff;
       margin-left: 0.5rem;
       padding: 0.3rem 0.6rem;
-      border: none;
-      background-color: #003366;
-      color: #fff;
+      border-radius: 5px;
       cursor: pointer;
-      border-radius: 4px;
     }
 
     .network {
-      position: relative;
-      width: 100%;
-      max-width: 1000px;
-      margin: 4rem auto;
-      height: 700px;
-    }
-
-    .center {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: #007acc;
-      border-radius: 50%;
-      padding: 2rem;
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-      box-shadow: 0 0 30px rgba(0, 191, 255, 0.4);
-      border: 3px solid #fff;
-      z-index: 5;
-    }
-
-    .circle {
-      position: absolute;
-      background-color: #003366;
-      color: #fff;
-      border-radius: 50%;
-      width: 130px;
-      height: 130px;
       display: flex;
-      align-items: center;
+      flex-wrap: wrap;
       justify-content: center;
-      flex-direction: column;
-      text-align: center;
-      transition: transform 0.3s ease, background-color 0.3s ease;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-      border: 2px solid #00bfff;
+      max-width: 1000px;
+      margin: 3rem auto;
+      gap: 2rem;
+      padding: 0 1rem;
     }
 
-    .circle:hover {
-      transform: scale(1.2);
-      background-color: #0055a5;
+    .service {
+      width: 140px;
+      background-color: #003366;
+      border: 2px solid #00bfff;
+      border-radius: 15px;
+      text-align: center;
+      padding: 1rem;
+      transition: transform 0.3s ease, background-color 0.3s ease;
+      box-shadow: 0 0 10px rgba(0, 191, 255, 0.2);
+    }
+
+    .service:hover {
+      transform: scale(1.1);
+      background-color: #005fa3;
       z-index: 10;
     }
 
-    .circle svg {
-      margin-bottom: 0.3rem;
+    .service svg {
+      width: 48px;
+      height: 48px;
+      margin-bottom: 0.5rem;
+      fill: #00bfff;
     }
 
-    .circle span {
-      font-size: 0.9rem;
+    .service-title {
+      font-size: 0.95rem;
       color: #fff;
     }
 
-    .circle:nth-child(2)  { top: 5%;   left: 45%; }
-    .circle:nth-child(3)  { top: 20%;  left: 75%; }
-    .circle:nth-child(4)  { top: 50%;  left: 90%; }
-    .circle:nth-child(5)  { top: 80%;  left: 75%; }
-    .circle:nth-child(6)  { top: 85%;  left: 45%; }
-    .circle:nth-child(7)  { top: 80%;  left: 15%; }
-    .circle:nth-child(8)  { top: 50%;  left: 0%; }
-    .circle:nth-child(9)  { top: 20%;  left: 15%; }
-    .circle:nth-child(10) { top: 35%;  left: 50%; }
-
     footer {
       text-align: center;
-      padding: 2rem;
+      padding: 2rem 1rem;
       background-color: #001d3d;
       color: #ccc;
+      font-size: 0.9rem;
     }
 
     a {
@@ -123,87 +98,66 @@
       text-decoration: none;
     }
 
-    @media (max-width: 768px) {
-      .network {
-        height: auto;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 1rem;
-        padding: 2rem;
-      }
-
-      .circle {
-        position: static !important;
-        width: 100px;
-        height: 100px;
-      }
-
-      .center {
-        position: static;
-        transform: none;
-        margin-bottom: 2rem;
+    @media (max-width: 600px) {
+      .service {
+        width: 45%;
       }
     }
   </style>
 </head>
 <body>
 
-  <div class="language-toggle">
-    <button onclick="setLanguage('pl')">PL</button>
-    <button onclick="setLanguage('en')">EN</button>
+  <div class="lang-switcher">
+    <button>PL</button>
+    <button>EN</button>
   </div>
 
   <header>
     <h1>DoItWithIT</h1>
-    <p>Realne wsparcie IT dla domu i małych firm</p>
+    <p class="subtitle">Realne wsparcie IT dla domu i małych firm</p>
   </header>
 
   <div class="network">
-    <div class="center">DoItWithIT</div>
-
-    <div class="circle" data-pl="Zdalna pomoc" data-en="Remote Help">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M4 4h16v16H4z"/><path d="M8 20v-4h8v4"/><circle cx="12" cy="10" r="2"/></svg>
-      <span>Zdalna pomoc</span>
+    <div class="service">
+      <!-- Zdalna pomoc -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M32 2a16 16 0 0 0-16 16v4a16 16 0 0 0 32 0v-4A16 16 0 0 0 32 2zm0 6a10 10 0 0 1 10 10v4a10 10 0 0 1-20 0v-4a10 10 0 0 1 10-10zM12 42h40v6H12zm2 8h36v4H14z"/></svg>
+      <div class="service-title">Zdalna pomoc</div>
     </div>
 
-    <div class="circle" data-pl="Instalacja systemu i oprogramowania" data-en="System and Software Installation">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="3" y="4" width="18" height="14"/><circle cx="12" cy="12" r="2"/><path d="M12 16v2"/></svg>
-      <span>Instalacja systemu</span>
+    <div class="service">
+      <!-- Instalacja systemu i oprogramowania -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M6 8h52v40H6zm2 2v36h48V10zm4 44h40v2H12z"/><path d="M28 50h8v4h-8zM32 12a10 10 0 1 0 0 20 10 10 0 0 0 0-20zm0 2a8 8 0 1 1 0 16 8 8 0 0 1 0-16z"/></svg>
+      <div class="service-title">Instalacja systemu</div>
     </div>
 
-    <div class="circle" data-pl="Konfiguracja sieci" data-en="Network Configuration">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><circle cx="5" cy="12" r="2"/><circle cx="19" cy="12" r="2"/><line x1="7" y1="12" x2="17" y2="12"/></svg>
-      <span>Konfiguracja sieci</span>
+    <div class="service">
+      <!-- Konfiguracja sieci -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M8 8h20v16H8zm28 0h20v16H36zM8 40h20v16H8zm28 0h20v16H36zM30 24h4v16h-4z"/></svg>
+      <div class="service-title">Konfiguracja sieci</div>
     </div>
 
-    <div class="circle" data-pl="Instalacja peryferiów" data-en="Peripheral Installation">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="4" y="4" width="16" height="10"/><line x1="4" y1="14" x2="20" y2="14"/><circle cx="8" cy="18" r="1"/><circle cx="16" cy="18" r="1"/></svg>
-      <span>Instalacja peryferiów</span>
+    <div class="service">
+      <!-- Instalacja peryferiów -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M10 16h44v20H10zm4 4v12h36V20zm0 20h36v4H14zM26 48h12v4H26z"/></svg>
+      <div class="service-title">Instalacja peryferiów</div>
     </div>
 
-    <div class="circle" data-pl="Obsługa domowa" data-en="Home Support">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M3 12l9-9 9 9"/><path d="M9 21V9h6v12"/></svg>
-      <span>Obsługa domowa</span>
+    <div class="service">
+      <!-- Obsługa domowa -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M32 8l24 16v32H8V24zM16 40h8v8h-8zm24 0h8v8h-8z"/></svg>
+      <div class="service-title">Obsługa domowa</div>
     </div>
 
-    <div class="circle" data-pl="Obsługa firmowa" data-en="Business Support">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><circle cx="8" cy="8" r="3"/><circle cx="16" cy="8" r="3"/><path d="M5 21v-2a4 4 0 0 1 4-4h0a4 4 0 0 1 4 4v2"/><path d="M15 21v-2a4 4 0 0 1 4-4h0a4 4 0 0 1 4 4v2"/></svg>
-      <span>Obsługa firmowa</span>
+    <div class="service">
+      <!-- Obsługa firmowa -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M16 8a8 8 0 1 1 0 16 8 8 0 0 1 0-16zm32 0a8 8 0 1 1 0 16 8 8 0 0 1 0-16zM12 32h40v4H12zm2 6h36v4H14z"/></svg>
+      <div class="service-title">Obsługa firmowa</div>
     </div>
 
-    <div class="circle" data-pl="Instalacje strukturalnych sieci teleinformatycznych" data-en="Structured Network Installation">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="4" y="4" width="6" height="6"/><rect x="14" y="4" width="6" height="6"/><rect x="4" y="14" width="6" height="6"/><rect x="14" y="14" width="6" height="6"/><line x1="10" y1="7" x2="14" y2="7"/><line x1="7" y1="10" x2="7" y2="14"/><line x1="10" y1="17" x2="14" y2="17"/><line x1="17" y1="10" x2="17" y2="14"/></svg>
-      <span>Sieci strukturalne</span>
-    </div>
-
-    <div class="circle" data-pl="Spawanie światłowodów" data-en="Fiber splicing">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2">
-        <path d="M12 2L2 22h20L12 2z"/>
-        <line x1="12" y1="8" x2="12" y2="16" />
-        <circle cx="12" cy="16" r="1.5" />
-      </svg>
-      <span>Spawanie światłowodów</span>
+    <div class="service">
+      <!-- Spawanie światłowodów -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M32 4l28 48H4zM32 12L10 48h44z"/></svg>
+      <div class="service-title">Spawanie światłowodów</div>
     </div>
   </div>
 
@@ -211,15 +165,6 @@
     <p>Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> | Tel: <a href="tel:+48123">+48 123</a></p>
     <p>&copy; 2025 DoItWithIT</p>
   </footer>
-
-  <script>
-    function setLanguage(lang) {
-      document.querySelectorAll('.circle').forEach(el => {
-        const label = el.querySelector('span');
-        label.textContent = el.getAttribute(`data-${lang}`);
-      });
-    }
-  </script>
 
 </body>
 </html>
