--- a/index.html
+++ b/index.html
@@ -15,156 +15,171 @@
 
     header {
       text-align: center;
-      padding: 2rem 1rem 1rem 1rem;
+      padding: 2rem;
     }
 
     h1 {
       font-size: 3rem;
+      margin-bottom: 0.5rem;
       color: #00bfff;
-      margin-bottom: 0.3rem;
     }
 
-    p.subtitle {
-      font-size: 1.2rem;
+    p {
       color: #ccc;
-      margin: 0;
+      font-size: 1.2rem;
     }
 
-    .lang-switcher {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
+    .language-switcher {
+      text-align: right;
+      padding: 0 2rem;
     }
 
-    .lang-switcher button {
+    .language-switcher button {
       background: none;
-      border: 1px solid #00bfff;
+      border: none;
       color: #00bfff;
-      margin-left: 0.5rem;
-      padding: 0.3rem 0.6rem;
-      border-radius: 5px;
+      font-weight: bold;
       cursor: pointer;
+      font-size: 1rem;
     }
 
     .network {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      max-width: 1000px;
-      margin: 3rem auto;
-      gap: 2rem;
-      padding: 0 1rem;
+      position: relative;
+      width: 100%;
+      max-width: 800px;
+      margin: 4rem auto;
+      height: 600px;
     }
 
-    .service {
-      width: 140px;
-      background-color: #003366;
-      border: 2px solid #00bfff;
-      border-radius: 15px;
+    .center {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #007acc;
+      border-radius: 50%;
+      padding: 2rem;
       text-align: center;
-      padding: 1rem;
-      transition: transform 0.3s ease, background-color 0.3s ease;
-      box-shadow: 0 0 10px rgba(0, 191, 255, 0.2);
+      font-size: 1.5rem;
+      font-weight: bold;
+      box-shadow: 0 0 30px rgba(0, 191, 255, 0.4);
+      border: 3px solid #fff;
     }
 
-    .service:hover {
-      transform: scale(1.1);
-      background-color: #005fa3;
+    .circle {
+      position: absolute;
+      background-color: #003366;
+      color: #fff;
+      border-radius: 50%;
+      padding: 1rem;
+      width: 120px;
+      height: 120px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      transition: transform 0.3s ease, background-color 0.3s ease;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+      border: 2px solid #00bfff;
+    }
+
+    .circle:hover {
+      transform: scale(1.2);
+      background-color: #0055a5;
       z-index: 10;
     }
 
-    .service svg {
-      width: 48px;
-      height: 48px;
+    .circle svg {
+      width: 40px;
+      height: 40px;
       margin-bottom: 0.5rem;
       fill: #00bfff;
     }
 
-    .service-title {
-      font-size: 0.95rem;
-      color: #fff;
-    }
+    .circle:nth-child(2) { top: 5%; left: 45%; }
+    .circle:nth-child(3) { top: 20%; left: 80%; }
+    .circle:nth-child(4) { top: 75%; left: 80%; }
+    .circle:nth-child(5) { top: 85%; left: 45%; }
+    .circle:nth-child(6) { top: 75%; left: 10%; }
+    .circle:nth-child(7) { top: 20%; left: 10%; }
+    .circle:nth-child(8) { top: 2%; left: 10%; }
 
     footer {
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 2rem;
       background-color: #001d3d;
       color: #ccc;
-      font-size: 0.9rem;
     }
 
     a {
       color: #00bfff;
       text-decoration: none;
     }
-
-    @media (max-width: 600px) {
-      .service {
-        width: 45%;
-      }
-    }
   </style>
 </head>
 <body>
 
-  <div class="lang-switcher">
-    <button>PL</button>
-    <button>EN</button>
+  <div class="language-switcher">
+    <button onclick="switchLanguage('pl')">PL</button> |
+    <button onclick="switchLanguage('en')">EN</button>
   </div>
 
   <header>
     <h1>DoItWithIT</h1>
-    <p class="subtitle">Realne wsparcie IT dla domu i małych firm</p>
+    <p>Realne wsparcie IT dla domu i małych firm</p>
   </header>
 
   <div class="network">
-    <div class="service">
-      <!-- Zdalna pomoc -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M32 2a16 16 0 0 0-16 16v4a16 16 0 0 0 32 0v-4A16 16 0 0 0 32 2zm0 6a10 10 0 0 1 10 10v4a10 10 0 0 1-20 0v-4a10 10 0 0 1 10-10zM12 42h40v6H12zm2 8h36v4H14z"/></svg>
-      <div class="service-title">Zdalna pomoc</div>
+    <div class="center">DoItWithIT</div>
+
+    <div class="circle">
+      <svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20Zm2.5 13.5h-5v-1.5h5Zm0-3h-5v-5h5Z"/></svg>
+      <span>Zdalna pomoc</span>
     </div>
 
-    <div class="service">
-      <!-- Instalacja systemu i oprogramowania -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M6 8h52v40H6zm2 2v36h48V10zm4 44h40v2H12z"/><path d="M28 50h8v4h-8zM32 12a10 10 0 1 0 0 20 10 10 0 0 0 0-20zm0 2a8 8 0 1 1 0 16 8 8 0 0 1 0-16z"/></svg>
-      <div class="service-title">Instalacja systemu</div>
+    <div class="circle">
+      <svg viewBox="0 0 24 24"><path d="M4 4h16v16H4V4Zm14 2H6v12h12V6Zm-6 10a4 4 0 1 1 0-8 4 4 0 0 1 0 8Z"/></svg>
+      <span>Instalacja systemu</span>
     </div>
 
-    <div class="service">
-      <!-- Konfiguracja sieci -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M8 8h20v16H8zm28 0h20v16H36zM8 40h20v16H8zm28 0h20v16H36zM30 24h4v16h-4z"/></svg>
-      <div class="service-title">Konfiguracja sieci</div>
+    <div class="circle">
+      <svg viewBox="0 0 24 24"><path d="M2 7h4v2H4v2H2V7Zm18 0h2v4h-2v-2h-2V7h2ZM4 15h2v2h2v2H2v-4h2Zm16 0h2v4h-4v-2h2v-2Zm-8-6a2 2 0 1 1 0 4 2 2 0 0 1 0-4Zm0 6a4 4 0 0 1 4 4h-8a4 4 0 0 1 4-4Z"/></svg>
+      <span>Konfiguracja sieci</span>
     </div>
 
-    <div class="service">
-      <!-- Instalacja peryferiów -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M10 16h44v20H10zm4 4v12h36V20zm0 20h36v4H14zM26 48h12v4H26z"/></svg>
-      <div class="service-title">Instalacja peryferiów</div>
+    <div class="circle">
+      <svg viewBox="0 0 24 24"><path d="M5 4h14v14H5V4Zm2 2v10h10V6H7Zm4 12h2v2h-2v-2Z"/></svg>
+      <span>Instalacja peryferiów</span>
     </div>
 
-    <div class="service">
-      <!-- Obsługa domowa -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M32 8l24 16v32H8V24zM16 40h8v8h-8zm24 0h8v8h-8z"/></svg>
-      <div class="service-title">Obsługa domowa</div>
+    <div class="circle">
+      <svg viewBox="0 0 24 24"><path d="M2 3h20v2H2V3Zm2 4h16v2H4V7Zm2 4h12v2H6v-2Zm2 4h8v2H8v-2Zm2 4h4v2h-4v-2Z"/></svg>
+      <span>Obsługa domowa</span>
     </div>
 
-    <div class="service">
-      <!-- Obsługa firmowa -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M16 8a8 8 0 1 1 0 16 8 8 0 0 1 0-16zm32 0a8 8 0 1 1 0 16 8 8 0 0 1 0-16zM12 32h40v4H12zm2 6h36v4H14z"/></svg>
-      <div class="service-title">Obsługa firmowa</div>
+    <div class="circle">
+      <svg viewBox="0 0 24 24"><path d="M6 2h12v6h4v14H2V8h4V2Zm2 0v6h8V2H8Zm-4 8v10h16V10H4Zm2 2h4v6H6v-6Zm6 0h6v6h-6v-6Z"/></svg>
+      <span>Obsługa firmowa</span>
     </div>
 
-    <div class="service">
-      <!-- Spawanie światłowodów -->
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M32 4l28 48H4zM32 12L10 48h44z"/></svg>
-      <div class="service-title">Spawanie światłowodów</div>
+    <div class="circle">
+      <svg viewBox="0 0 24 24"><path d="M4 10h16v2H4v-2Zm6-6h4v2h-4V4Zm-6 8h16v2H4v-2Zm6 4h4v2h-4v-2Z"/></svg>
+      <span>Spawanie światłowodów</span>
     </div>
+
   </div>
 
   <footer>
     <p>Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> | Tel: <a href="tel:+48123">+48 123</a></p>
     <p>&copy; 2025 DoItWithIT</p>
   </footer>
+
+  <script>
+    function switchLanguage(lang) {
+      alert('Zmiana języka na: ' + lang);
+    }
+  </script>
 
 </body>
 </html>
