--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+last:
+
+ <!DOCTYPE html>
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
@@ -15,11 +17,11 @@
 
     header {
       text-align: center;
-      padding: 2rem;
+      padding: 2rem 1rem;
     }
 
     h1 {
-      font-size: 3rem;
+      font-size: 2.5rem;
       margin-bottom: 0.5rem;
       color: #00bfff;
     }
@@ -29,26 +31,28 @@
       font-size: 1.2rem;
     }
 
-    .language-switcher {
-      text-align: right;
-      padding: 0 2rem;
+    .language-toggle {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
     }
 
-    .language-switcher button {
-      background: none;
+    .language-toggle button {
+      margin-left: 0.5rem;
+      padding: 0.3rem 0.6rem;
       border: none;
-      color: #00bfff;
-      font-weight: bold;
+      background-color: #003366;
+      color: #fff;
       cursor: pointer;
-      font-size: 1rem;
+      border-radius: 4px;
     }
 
     .network {
       position: relative;
       width: 100%;
-      max-width: 800px;
+      max-width: 1000px;
       margin: 4rem auto;
-      height: 600px;
+      height: 700px;
     }
 
     .center {
@@ -64,6 +68,7 @@
       font-weight: bold;
       box-shadow: 0 0 30px rgba(0, 191, 255, 0.4);
       border: 3px solid #fff;
+      z-index: 5;
     }
 
     .circle {
@@ -71,13 +76,12 @@
       background-color: #003366;
       color: #fff;
       border-radius: 50%;
-      padding: 1rem;
-      width: 120px;
-      height: 120px;
+      width: 130px;
+      height: 130px;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
+      flex-direction: column;
       text-align: center;
       transition: transform 0.3s ease, background-color 0.3s ease;
       box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
@@ -91,19 +95,23 @@
     }
 
     .circle svg {
-      width: 40px;
-      height: 40px;
-      margin-bottom: 0.5rem;
-      fill: #00bfff;
+      margin-bottom: 0.3rem;
     }
 
-    .circle:nth-child(2) { top: 5%; left: 45%; }
-    .circle:nth-child(3) { top: 20%; left: 80%; }
-    .circle:nth-child(4) { top: 75%; left: 80%; }
-    .circle:nth-child(5) { top: 85%; left: 45%; }
-    .circle:nth-child(6) { top: 75%; left: 10%; }
-    .circle:nth-child(7) { top: 20%; left: 10%; }
-    .circle:nth-child(8) { top: 2%; left: 10%; }
+    .circle span {
+      font-size: 0.9rem;
+      color: #fff;
+    }
+
+    .circle:nth-child(2)  { top: 5%;   left: 45%; }
+    .circle:nth-child(3)  { top: 20%;  left: 75%; }
+    .circle:nth-child(4)  { top: 50%;  left: 90%; }
+    .circle:nth-child(5)  { top: 80%;  left: 75%; }
+    .circle:nth-child(6)  { top: 85%;  left: 45%; }
+    .circle:nth-child(7)  { top: 80%;  left: 15%; }
+    .circle:nth-child(8)  { top: 50%;  left: 0%; }
+    .circle:nth-child(9)  { top: 20%;  left: 15%; }
+    .circle:nth-child(10) { top: 35%;  left: 50%; }
 
     footer {
       text-align: center;
@@ -116,13 +124,36 @@
       color: #00bfff;
       text-decoration: none;
     }
+
+    @media (max-width: 768px) {
+      .network {
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 1rem;
+        padding: 2rem;
+      }
+
+      .circle {
+        position: static !important;
+        width: 100px;
+        height: 100px;
+      }
+
+      .center {
+        position: static;
+        transform: none;
+        margin-bottom: 2rem;
+      }
+    }
   </style>
 </head>
 <body>
 
-  <div class="language-switcher">
-    <button onclick="switchLanguage('pl')">PL</button> |
-    <button onclick="switchLanguage('en')">EN</button>
+  <div class="language-toggle">
+    <button onclick="setLanguage('pl')">PL</button>
+    <button onclick="setLanguage('en')">EN</button>
   </div>
 
   <header>
@@ -133,41 +164,49 @@
   <div class="network">
     <div class="center">DoItWithIT</div>
 
-    <div class="circle">
-      <svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20Zm2.5 13.5h-5v-1.5h5Zm0-3h-5v-5h5Z"/></svg>
+    <div class="circle" data-pl="Zdalna pomoc" data-en="Remote Help">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M4 4h16v16H4z"/><path d="M8 20v-4h8v4"/><circle cx="12" cy="10" r="2"/></svg>
       <span>Zdalna pomoc</span>
     </div>
 
-    <div class="circle">
-      <svg viewBox="0 0 24 24"><path d="M4 4h16v16H4V4Zm14 2H6v12h12V6Zm-6 10a4 4 0 1 1 0-8 4 4 0 0 1 0 8Z"/></svg>
+    <div class="circle" data-pl="Instalacja systemu i oprogramowania" data-en="System and Software Installation">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="3" y="4" width="18" height="14"/><circle cx="12" cy="12" r="2"/><path d="M12 16v2"/></svg>
       <span>Instalacja systemu</span>
     </div>
 
-    <div class="circle">
-      <svg viewBox="0 0 24 24"><path d="M2 7h4v2H4v2H2V7Zm18 0h2v4h-2v-2h-2V7h2ZM4 15h2v2h2v2H2v-4h2Zm16 0h2v4h-4v-2h2v-2Zm-8-6a2 2 0 1 1 0 4 2 2 0 0 1 0-4Zm0 6a4 4 0 0 1 4 4h-8a4 4 0 0 1 4-4Z"/></svg>
+    <div class="circle" data-pl="Konfiguracja sieci" data-en="Network Configuration">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><circle cx="5" cy="12" r="2"/><circle cx="19" cy="12" r="2"/><line x1="7" y1="12" x2="17" y2="12"/></svg>
       <span>Konfiguracja sieci</span>
     </div>
 
-    <div class="circle">
-      <svg viewBox="0 0 24 24"><path d="M5 4h14v14H5V4Zm2 2v10h10V6H7Zm4 12h2v2h-2v-2Z"/></svg>
+    <div class="circle" data-pl="Instalacja peryferiów" data-en="Peripheral Installation">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="4" y="4" width="16" height="10"/><line x1="4" y1="14" x2="20" y2="14"/><circle cx="8" cy="18" r="1"/><circle cx="16" cy="18" r="1"/></svg>
       <span>Instalacja peryferiów</span>
     </div>
 
-    <div class="circle">
-      <svg viewBox="0 0 24 24"><path d="M2 3h20v2H2V3Zm2 4h16v2H4V7Zm2 4h12v2H6v-2Zm2 4h8v2H8v-2Zm2 4h4v2h-4v-2Z"/></svg>
+    <div class="circle" data-pl="Obsługa domowa" data-en="Home Support">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M3 12l9-9 9 9"/><path d="M9 21V9h6v12"/></svg>
       <span>Obsługa domowa</span>
     </div>
 
-    <div class="circle">
-      <svg viewBox="0 0 24 24"><path d="M6 2h12v6h4v14H2V8h4V2Zm2 0v6h8V2H8Zm-4 8v10h16V10H4Zm2 2h4v6H6v-6Zm6 0h6v6h-6v-6Z"/></svg>
+    <div class="circle" data-pl="Obsługa firmowa" data-en="Business Support">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><circle cx="8" cy="8" r="3"/><circle cx="16" cy="8" r="3"/><path d="M5 21v-2a4 4 0 0 1 4-4h0a4 4 0 0 1 4 4v2"/><path d="M15 21v-2a4 4 0 0 1 4-4h0a4 4 0 0 1 4 4v2"/></svg>
       <span>Obsługa firmowa</span>
     </div>
 
-    <div class="circle">
-      <svg viewBox="0 0 24 24"><path d="M4 10h16v2H4v-2Zm6-6h4v2h-4V4Zm-6 8h16v2H4v-2Zm6 4h4v2h-4v-2Z"/></svg>
-      <span>Spawanie światłowodów</span>
+    <div class="circle" data-pl="Instalacje strukturalnych sieci teleinformatycznych" data-en="Structured Network Installation">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="4" y="4" width="6" height="6"/><rect x="14" y="4" width="6" height="6"/><rect x="4" y="14" width="6" height="6"/><rect x="14" y="14" width="6" height="6"/><line x1="10" y1="7" x2="14" y2="7"/><line x1="7" y1="10" x2="7" y2="14"/><line x1="10" y1="17" x2="14" y2="17"/><line x1="17" y1="10" x2="17" y2="14"/></svg>
+      <span>Sieci strukturalne</span>
     </div>
 
+    <div class="circle" data-pl="Spawanie światłowodów" data-en="Fiber splicing">
+      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2">
+        <path d="M12 2L2 22h20L12 2z"/>
+        <line x1="12" y1="8" x2="12" y2="16" />
+        <circle cx="12" cy="16" r="1.5" />
+      </svg>
+      <span>Spawanie światłowodów</span>
+    </div>
   </div>
 
   <footer>
@@ -176,8 +215,11 @@
   </footer>
 
   <script>
-    function switchLanguage(lang) {
-      alert('Zmiana języka na: ' + lang);
+    function setLanguage(lang) {
+      document.querySelectorAll('.circle').forEach(el => {
+        const label = el.querySelector('span');
+        label.textContent = el.getAttribute(`data-${lang}`);
+      });
     }
   </script>
 
